style.css
/* Google font */

@import url('https://fonts.googleapis.com/css2?family=Righteous&family=Roboto&display=swap');
:root {
    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
    font-family: 'Roboto', sans-serif;
    /* Color Palette */
    --white: white;
    --off-white: rgb(211, 211, 211);
    --black: black;
    --green: #3bd1ad;
    --purple: #5c3ba3;
    --orange: #fe492c;
    --yellow: #ffd200;
    /*  */
    --default-shadow: 0px 5px 10px black;
    --text-shadow: 2px 2px 1px var(--orange);
    --height: 200px;
    --width: 200px;
}

.grid-wrapper {
    display: grid;
    grid-template-columns: 3fr 2fr;
    grid-template-areas: "hero usp" "content content";
}

/* mobile layout */

@media (max-width: 500px) {
    .grid-wrapper {
        grid-template-columns: auto;
        grid-template-rows: auto 9rem auto;
        grid-template-areas: "hero" "usp" "content";
    }
    h1 {
        font-size: 1em;
        margin: 1rem;
    }
    nav>a {
        padding: 0px;
    }
    .payment-plan {
        margin: 1rem 0 1rem 0;
        width: 50%;
        height: 50%;
    }
    .triangle-bottomright {
        display: none;
    }
}

.flex {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    gap: 5px;
}

.banner {
    background-color: var(--white);
    text-align: center;
    align-self: inherit;
    font-size: 3rem;
    padding: 0;
    font-family: 'Righteous', cursive;
    text-shadow: var(--text-shadow);
}

nav {
    background-color: var(--black);
    text-align: center;
}

nav>a, nav>p {
    text-decoration: none;
    color: var(--white);
    font-weight: 900;
    padding: 1rem;
    /* border-radius: 5px; */
}

nav>p {
    padding: 0;
    color: var(--yellow);
}

nav>a:hover {
    background-color: var(--orange);
    color: var(--black);
}

.sticky {
    position: -webkit-sticky;
    position: sticky;
    left: 0;
    top: 0;
}

.usp {
    grid-area: usp;
    background-color: var(--green);
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;
    height: 100%;
    z-index: 5;
}

/* call to action button */

#cta {
    font-size: 24px;
    border-radius: 10px;
    border-style: unset;
    box-shadow: var(--default-shadow);
    font-weight: 900;
    background-color: var(--yellow);
    color: var(--black);
    padding: 0.5rem;
}

#cta:hover {
    transform: scale(1.05);
    cursor: pointer;
}

.hero-image {
    grid-area: hero;
    background-color: var(--white);
    max-height: 100%;
    display: flex;
}

.triangle-bottomright {
    grid-area: hero;
    justify-self: right;
    width: 0;
    height: auto;
    border-bottom: var(--height) solid var(--green);
    border-left: var(--width) solid transparent;
    margin-right: -1px;
}

img {
    width: 100%;
}

.content {
    grid-area: content;
    background-color: var(--white);
    padding: 2rem;
}

.promo-wrapper {
    display: flex;
    align-items: center;
}

.promo-video {
    width: 100%;
    border-radius: 10px;
    text-align: center;
}

.plan-wrapper {
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
}

.payment-plan {
    text-decoration: unset;
    text-align: center;
    color: var(--white);
    background-color: var(--purple);
    border-style: solid;
    border-radius: 20px;
    border-color: var(--black);
    width: 15rem;
    height: 15rem;
    margin: 1rem;
    box-shadow: var(--default-shadow);
}

.payment-plan:hover {
    transform: scale(1.05);
}

.plan-name {
    font-size: 2rem;
    text-shadow: var(--default-shadow);
}

.plan-price {
    font-weight: 900;
    font-size: 36pt;
    text-shadow: var(--default-shadow);
    margin: 0 0 0 0;
}

/* Uncomment if perks are listed */

/* .plan-perks {
    text-align: left;
    margin-left: 15%;
    color: black;
    font-weight: 900;

} */

footer {
    background-color: var(--black);
    color: var(--white);
    padding: 1rem;
    text-align: center;
}

